<resources>
    <string name="app_name">Cafeteria</string>
    <string name="yummy_food">Yummy Food </string>
    <string name="hello">Hello</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_will_send">Enter your number for verificaion</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_20">+20-</string>
    <string name="num_hint">0123456789</string>
    <string name="get_otp">GET OTP</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_the_otp_sent_to">Enter the code sent to</string>
    <string name="didn_t_receive_the_otp">Didn\'t receive the OTP?</string>
    <string name="resend_otp">RESEND OTP</string>
    <string name="set_your_new_password">Your identity has been verified \n Set your new password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_label_1">Home</string>
    <string name="text_label_2">Profile</string>
    <string name="text_label_3">Cart</string>
    <string name="text_label_5">Logout</string>
    <string name="text_label_4">Offers</string>
    <!--Error layout-->
    <string name="error">Error</string>
    <string name="error_message">Something went wrong, please try again later!</string>
    <string name="retry">Retry</string>
</resources>